--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,17 @@ server.port=8080
 
 # Oracle DB - "foo"
 #spring.datasource.url=jdbc:oracle:thin:@//db-server-foo:1521/FOO
-spring.datasource.url=jdbc:h2:mem:foo
-spring.datasource.username=fooadmin
-spring.datasource.password=foo123
+#spring.datasource.url=jdbc:h2:mem:foo
+foo.datasource.jdbc-url=jdbc:h2:mem:foo
+foo.datasource.username=fooadmin
+foo.datasource.password=foo123
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.driver-class-name=org.h2.Driver
+foo.datasource.driver-class-name=org.h2.Driver
 
 # PostgreSQL DB - "bar"
 #bar.datasource.url=jdbc:postgresql://db-server-bar:5432/bar
-bar.datasource.url=jdbc:h2:mem:bar
+#bar.datasource.url=jdbc:h2:mem:bar
+bar.datasource.jdbc-url=jdbc:h2:mem:bar
 bar.datasource.username=baradmin
 bar.datasource.password=bar123
 #bar.datasource.driver-class-name=org.postgresql.Driver
@@ -20,9 +22,12 @@ bar.datasource.driver-class-name=org.h2.Driver
 
 #auto select database dialect
 spring.jpa.database=default
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.open-in-view=false
